# serializer version: 1
# name: TestRankCriterionSequence.test_filter_absolute_ranks_on_sequence[event]
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  
  '''
# ---
# name: TestRankCriterionSequence.test_filter_absolute_ranks_on_sequence[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  
  '''
# ---
# name: TestRankCriterionSequence.test_filter_first_entity_on_sequence[event]
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  
  '''
# ---
# name: TestRankCriterionSequence.test_filter_first_entity_on_sequence[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  
  '''
# ---
# name: TestRankCriterionSequence.test_filter_first_entity_on_sequence_inplace[event]
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  
  '''
# ---
# name: TestRankCriterionSequence.test_filter_first_entity_on_sequence_inplace[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  
  '''
# ---
# name: TestRankCriterionSequence.test_filter_last_entity_on_sequence[event]
  '''
  patient_id,date,event_type,provider
  1,2023-12-26,EMERGENCY,
  
  '''
# ---
# name: TestRankCriterionSequence.test_filter_last_entity_on_sequence[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-09-09,2023-09-20,ANTICOAGULANT,INTRAVENOUS,3
  
  '''
# ---
# name: TestRankCriterionSequence.test_filter_out_of_bound_on_sequence[event]
  '''
  patient_id,date,event_type,provider
  
  '''
# ---
# name: TestRankCriterionSequence.test_filter_out_of_bound_on_sequence[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  
  '''
# ---
# name: TestRankCriterionSequence.test_filter_relative_ranks_on_sequence[event]
  '''
  patient_id,date,event_type,provider
  1,2023-01-21,EXAM,NURSE
  1,2023-01-22,FOLLOW_UP,RADIOLOGIST
  
  '''
# ---
# name: TestRankCriterionSequence.test_filter_relative_ranks_on_sequence[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,2023-01-08,2023-01-18,PAIN_RELIEVER,,2
  1,2023-01-12,2023-01-28,ANTICOAGULANT,CUTANEOUS,1
  
  '''
# ---
